--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
@@ -15,7 +17,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
     "express-validator": "^3.2.0",
-    "morgan": "~1.8.1","mongodb": "^2.2.26",
+    "mongodb": "^2.2.26",
     "mongoose": "^4.9.7",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
@@ -31,6 +33,7 @@
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
+    "nodemon": "^1.11.0",
     "react-scripts": "0.9.5"
   }
 }
